--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-ChatAppFirebase/GoogleService-Info.plist
+.DS_Store
+Pods/
+xcuserdata/
+*.xcworkspace/
+*GoogleService-Info.plist
+Secrets
+Secrets.tar
